<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/size20"
        android:layout_margin="5dp"
        android:text="@string/title_general_not_underlined"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightBlack"
        android:layout_below="@+id/tv_title"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_margin="5dp"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/chimp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/pic"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_street"
            android:text="@string/street"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/pic"
            android:layout_toStartOf="@+id/pic"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/size15"
            android:gravity="center"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_city"
            android:text="@string/city"
            android:textSize="@dimen/size15"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/pic"
            android:layout_toStartOf="@+id/pic"
            android:layout_below="@+id/tv_street"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_gsm"
            android:text="@string/gsm"
            android:textSize="@dimen/size15"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/pic"
            android:layout_toStartOf="@+id/pic"
            android:layout_below="@+id/tv_city"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email"
            android:text="@string/email"
            android:textSize="@dimen/size15"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/pic"
            android:layout_toStartOf="@+id/pic"
            android:layout_below="@+id/tv_gsm"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_github"
            android:text="@string/github"
            android:textSize="@dimen/size15"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/pic"
            android:layout_toStartOf="@+id/pic"
            android:layout_below="@+id/tv_email"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dob"
            android:text="@string/dob"
            android:textSize="@dimen/size15"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/pic"
            android:layout_toStartOf="@+id/pic"
            android:layout_below="@+id/tv_github"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>


</RelativeLayout>